--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
   "dependencies": {
     "@apollo/client": "^3.11.4",
     "@heroicons/react": "^2.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^16.18.105",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "currency-symbol-map": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -45,7 +42,12 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^7.1.2",
-    "tailwindcss": "^3.4.10"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "tailwindcss": "^3.4.10",
+    "ts-jest": "^29.2.5"
   }
 }
